--- a/src/roles/4-docker/templates/daemon.json.j2
+++ b/src/roles/4-docker/templates/daemon.json.j2
@@ -1,6 +1,6 @@
 {
         "insecure-registries": ["0.0.0.0/0"],
-        "registry-mirrors": ["https://0yjmvwvv.mirror.aliyuncs.com"],
+        "registry-mirrors": ["https://registry.docker-cn.com"],
         "exec-opts": ["native.cgroupdriver=systemd"],
         "storage-driver": "devicemapper"
 }
